Fixed cropper bugs
* Fixed issue with image being stretched in safari
* Added image resize when launching cropper (might take off)
* Adding loading icon launching cropper
* Made cropper responsive
* Fixed dialog opening and closing position
* Fixed cropper proxy

--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -60,8 +60,8 @@ p {
 }
 
 /*.row {*/
-    /*margin-right: 0;*/
-    /*margin-left: 0;*/
+/*margin-right: 0;*/
+/*margin-left: 0;*/
 /*}*/
 
 /*.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3,*/
@@ -69,8 +69,8 @@ p {
 /*.col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9,*/
 /*.col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11,*/
 /*.col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {*/
-    /*padding-right: 0;*/
-    /*padding-left: 0;*/
+/*padding-right: 0;*/
+/*padding-left: 0;*/
 /*}*/
 
 .default-margin-left {
@@ -1054,8 +1054,25 @@ a.text-white:focus {
 .cropArea {
     background: #E4E4E4;
     overflow: hidden;
-    width: 500px;
-    height: 350px;
+    width: 800px;
+    height: 600px;
+    position: relative;
+}
+
+.cropImage {
+    max-width: 100%;
+    max-height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    display: none;
+}
+
+.cropper-bg {
+    background-image: url('/static/img/gridme.png') !important;
 }
 
 .avatarlg {
@@ -1107,6 +1124,15 @@ md-content {
     overflow-x: hidden;
 }
 
+spinner {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin-top: 25%;
+}
+
 @media screen and (max-width: 479px) {
     .deckgrid[deckgrid]::before {
         content: '1 .column.column-1-1';
@@ -1125,6 +1151,15 @@ md-content {
         padding-left: 1px;
         padding-bottom: 2px;
     }
+
+    .cropArea {
+        width: 300px;
+        height: 225px;
+    }
+
+    md-dialog {
+        max-width: 100%;
+    }
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
@@ -1135,6 +1170,11 @@ md-content {
     .container-fluid {
         padding-right: 30px;
         padding-left: 30px;
+    }
+
+    .cropArea {
+        width: 360px;
+        height: 270px;
     }
 }
 
@@ -1433,6 +1473,11 @@ md-content {
         padding: 10px;
         margin: 27px 0 27px;
     }
+
+    .cropArea {
+        width: 500px;
+        height: 375px;
+    }
 }
 
 @media (max-width: 991px) {
@@ -1560,6 +1605,11 @@ md-content {
     .search {
         width: 270px;
     }
+
+    .cropArea {
+        width: 640px;
+        height: 480px;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1569,6 +1619,106 @@ md-content {
 
     .search {
         width: 400px;
+    }
+}
+
+.sk-folding-cube {
+    margin: 40px auto;
+    width: 40px;
+    height: 40px;
+    position: relative;
+    -webkit-transform: rotateZ(45deg);
+    transform: rotateZ(45deg);
+}
+
+.sk-folding-cube .sk-cube {
+    float: left;
+    width: 50%;
+    height: 50%;
+    position: relative;
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.sk-folding-cube .sk-cube:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+    -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
+    animation: sk-foldCubeAngle 2.4s infinite linear both;
+    -webkit-transform-origin: 100% 100%;
+    -ms-transform-origin: 100% 100%;
+    transform-origin: 100% 100%;
+}
+
+.sk-folding-cube .sk-cube2 {
+    -webkit-transform: scale(1.1) rotateZ(90deg);
+    transform: scale(1.1) rotateZ(90deg);
+}
+
+.sk-folding-cube .sk-cube3 {
+    -webkit-transform: scale(1.1) rotateZ(180deg);
+    transform: scale(1.1) rotateZ(180deg);
+}
+
+.sk-folding-cube .sk-cube4 {
+    -webkit-transform: scale(1.1) rotateZ(270deg);
+    transform: scale(1.1) rotateZ(270deg);
+}
+
+.sk-folding-cube .sk-cube2:before {
+    -webkit-animation-delay: 0.3s;
+    animation-delay: 0.3s;
+}
+
+.sk-folding-cube .sk-cube3:before {
+    -webkit-animation-delay: 0.6s;
+    animation-delay: 0.6s;
+}
+
+.sk-folding-cube .sk-cube4:before {
+    -webkit-animation-delay: 0.9s;
+    animation-delay: 0.9s;
+}
+
+@-webkit-keyframes sk-foldCubeAngle {
+    0%, 10% {
+        -webkit-transform: perspective(140px) rotateX(-180deg);
+        transform: perspective(140px) rotateX(-180deg);
+        opacity: 0;
+    }
+    25%, 75% {
+        -webkit-transform: perspective(140px) rotateX(0deg);
+        transform: perspective(140px) rotateX(0deg);
+        opacity: 1;
+    }
+    90%, 100% {
+        -webkit-transform: perspective(140px) rotateY(180deg);
+        transform: perspective(140px) rotateY(180deg);
+        opacity: 0;
+    }
+}
+
+@keyframes sk-foldCubeAngle {
+    0%, 10% {
+        -webkit-transform: perspective(140px) rotateX(-180deg);
+        transform: perspective(140px) rotateX(-180deg);
+        opacity: 0;
+    }
+    25%, 75% {
+        -webkit-transform: perspective(140px) rotateX(0deg);
+        transform: perspective(140px) rotateX(0deg);
+        opacity: 1;
+    }
+    90%, 100% {
+        -webkit-transform: perspective(140px) rotateY(180deg);
+        transform: perspective(140px) rotateY(180deg);
+        opacity: 0;
     }
 }
 
